# ContestChecker

./: CMakeLists.txt  README.md  README_RU.md
Problems/ArraySum/: Problem.txt  ProblemArraySum.h  ProblemArraySum_tests.h  input_0.txt  output_0.txt
Solutions/ArraySum/: SolutionArraySum_mapron_naive.h  SolutionArraySum_mapron_nooverflow.h
cmake/: ProblemCodeTestsInit.cpp.in  ProblemFileTestsInit.cpp.in  ProblemInit.cpp.in  SolutionInit.cpp.in  config.cmake
src/: CommandLine.cpp  CommandLine.h  CommonProblemTypes.h  CommonProblemTypesDetails.h  CommonTestUtils.h  CustomAlloc.cpp  CustomAlloc.h  DefaultAlloc.cpp  PerformanceCounter.cpp  PerformanceCounter.h  main.cpp
